2014-03-27  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_detail.php
	  operation/incidents/incident_files.php: Added extension
	validation to the files uploaded.

2014-03-27  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/zh_CN.mo
	  include/languages/zh_TN.po
	  include/languages/index.pot: Updated translations.

2014-03-26  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup_mail.php: Changed labels.

	* operation/user_report/report_full.php: Fixed bug
	in data filter.

2014-03-26  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* index.php: Now the flash charts are disabled correctly
	when the html is buffered to make a report or something.

	* operation/invoices/invoice_detail.php,
	  operation/invoices/invoice_stats.php: Now the invoices
	can be filtered by company role.

	* include/integria_cron_enterprise.php: Minor fix.

2014-03-25  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_detail.php: Improved the
	ticket insert and update. Now is possible to upload
	multiple files on the ticket creation.
	
	* include/styles/integria.css: Deleted the shadow of the
	multiupload control.

2014-03-24  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_files.php: Now is possible
	to upload multiple files via ajax.	

	* godmode/setup/offline_update.php,
	  operation/download/browse.php: Function removed.

	* include/functions_db.php: Added the function "get_incident_file".

	* include/js/integria.js: Added the function "formatFileSize".
