@@ -26,6 +26,7 @@ $search_date_begin = get_parameter ('search_date_begin');
 $search_date_end = get_parameter ('search_date_end');
 $search_invoice_type = (string) get_parameter ('search_invoice_type');
 $search_company_role = (int) get_parameter ('search_company_role');
+$search_company_manager = (string) get_parameter ('search_company_manager');
 
 $pdf_report = get_parameter("pdf_output");
 
@@ -34,7 +35,7 @@ if ($pdf_report) {
 	$graph_ttl = 2;
 }
 
-$search_params = "&search_text=$search_text&search_invoice_status=$search_invoice_status&search_last_date=$search_last_date&search_date_end=$search_date_end&search_date_begin=$search_date_begin&search_invoice_type=$search_invoice_type&search_company_role=$search_company_role";
+$search_params = "&search_text=$search_text&search_invoice_status=$search_invoice_status&search_last_date=$search_last_date&search_date_end=$search_date_end&search_date_begin=$search_date_begin&search_invoice_type=$search_invoice_type&search_company_role=$search_company_role&search_company_manager=$search_company_manager";
 
 $read = check_crm_acl ('company', 'cr');
 
@@ -95,6 +96,9 @@ if ($search_invoice_type != "") {
 }
 if ($search_company_role > 0) {
 	$where_clause .= sprintf (' AND id_company IN (SELECT id FROM tcompany WHERE id_company_role = %d)', $search_company_role);
+}
+if ($search_company_manager != "") {
+	$where_clause .= sprintf (' AND id_company IN (SELECT id FROM tcompany WHERE manager = "%s")', $search_company_manager);
 }
 
 $invoices = crm_get_all_invoices($where_clause);
